i dont know git well yet

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,9 @@
-ChoosingYourWorkflow.pdf
-/ChoosingYourWorkflow.html
-/modsCollection.xml
-/test.html
-/ChoosingYourWorkflow-blx.bib
-/ChoosingYourWorkflow.tex
-/workflow-apps-blx.bib
-/workflow-apps.html
-/workflow-apps.pdf
-/workflow-apps.tex
-/workflow-apps.run.xml
+.gitignore
+*~
+*.pdf
+*.html
+*.docx
+./figures/*
+
+
+
